--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -64,14 +64,18 @@
 </header>
 <!-- Header End -->
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg spad" >
+    <section class="breadcrumb-section set-bg spad" data-setbg="img/phòng0.png" >
         <div class="container">
             <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-10">
-                    <img src="img/phòng0.png" alt="">
+                <div class="col-lg-12">
+                    <div class="breadcrumb-text">
+                        <h2>Sản phẩm</h2>
+                        <div class="breadcrumb-controls">
+                            <a href="home.html"><i class="fa fa-home"></i> Home</a>
+                            <span>Phòng chống</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-1"></div>
             </div>
         </div>
     </section>
