--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -69,10 +69,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>Sản phẩm</h2>
+                        <h2>Phòng chống</h2>
                         <div class="breadcrumb-controls">
-                            <a href="home.html"><i class="fa fa-home"></i> Home</a>
-                            <span>Phòng chống</span>
+                           
+                            
                         </div>
                     </div>
                 </div>
